Memory leak in Cycles render #66075

Closed
opened 2019-06-24 10:30:44 +02:00 by Marcin Twarowski · 4 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-23 22:45, hash: 9c5d54bfaf
Worked: 2.79

Short description of error
During render in Cycles used memory increases indefinitely.

Exact steps for others to reproduce the error
I attached two identical scenes, one for Blender 2.80 and one for 2.79. In 2.79 memory usage during rendering stays at the same level of about 208MB. In 2.80 it starts at around 200 MB and then grows at about 5MB per second. In a bigger scene that eventually leads to running out of memory and crash.
obraz.png
memory_leak_test_2_80.blend
memory_leak_test_2_79.blend

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-23 22:45, hash: `9c5d54bfaf` Worked: 2.79 **Short description of error** During render in Cycles used memory increases indefinitely. **Exact steps for others to reproduce the error** I attached two identical scenes, one for Blender 2.80 and one for 2.79. In 2.79 memory usage during rendering stays at the same level of about 208MB. In 2.80 it starts at around 200 MB and then grows at about 5MB per second. In a bigger scene that eventually leads to running out of memory and crash. ![obraz.png](https://archive.blender.org/developer/F7544089/obraz.png) [memory_leak_test_2_80.blend](https://archive.blender.org/developer/F7544088/memory_leak_test_2_80.blend) [memory_leak_test_2_79.blend](https://archive.blender.org/developer/F7544087/memory_leak_test_2_79.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

This issue was referenced by blender/cycles@933d3ecbf7

This issue was referenced by blender/cycles@933d3ecbf79a376a5ac85a4cdce3bba284284674

This issue was referenced by 037956f13f

This issue was referenced by 037956f13fc947c9f08302634a64449ec9ba590e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-06-24 13:38:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66075
No description provided.