Fix T66075: memory leak in Cycles render tile updates